# Pawpularity

./: .gitignore  README.md  exp.sh  inference.py  main.py  pyproject.toml  requirements.txt
conf/: config.yaml
conf/model/: default.yaml  resnet18.yaml  resnet50.yaml  swin_v2_b.yaml  swin_v2_t.yaml
model/: baseline.py
utils/: data.py  debug.py  wandb_utils.py
