[project]
name = "pawpularity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filelock==3.13.1",
    "fsspec==2024.6.1",
    "jinja2==3.1.4",
    "kaggle>=1.7.4.2",
    "markupsafe==3.0.2",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==2.1.2",
    "nvidia-cublas-cu11==11.11.3.6",
    "nvidia-cuda-cupti-cu11==11.8.87",
    "nvidia-cuda-nvrtc-cu11==11.8.89",
    "nvidia-cuda-runtime-cu11==11.8.89",
    "nvidia-cudnn-cu11==9.1.0.70",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-curand-cu11==10.3.0.86",
    "nvidia-cusolver-cu11==11.4.1.48",
    "nvidia-cusparse-cu11==11.7.5.86",
    "nvidia-nccl-cu11==2.21.5",
    "nvidia-nvtx-cu11==11.8.86",
    "opencv-python>=4.11.0.86",
    "pep8>=1.7.1",
    "pillow==11.0.0",
    "scikit-learn>=1.6.1",
    "sympy==1.13.1",
    "torch==2.6.0+cu118",
    "torchvision==0.21.0+cu118",
    "tqdm>=4.67.1",
    "triton==3.2.0",
    "typing-extensions==4.12.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118" },
]
torchvision = [
  { index = "pytorch-cu118" },
]
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
